updated meta tags

--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
         <meta name="description" content="Portfolio" />
         <meta name="author" content="Renan Stuchi" />
         <title>Portfolio | Renan Stuchi</title>
+		<meta prefix="og: http://ogp.me/ns#" property="og:title" content="Portfolio | Renan Stuchi">
+		<meta prefix="og: http://ogp.me/ns#" property="og:description" content="Renan Stuchi | Full-stack developer">
+		<meta prefix="og: http://ogp.me/ns#" property="og:image" content="https://renstu.github.io/assets/img/social_preview.jpg">
+		<meta prefix="og: http://ogp.me/ns#" property="og:url" content="https://renstu.github.io/index.html">
+		<meta prefix="og: http://ogp.me/ns#" property="og:site_name" content="Portfolio | Renan Stuchi">
+		<meta prefix="og: http://ogp.me/ns#" property="og:type" content="website">
+		<meta property="twitter:card" content="https://renstu.github.io/assets/img/social_preview.jpg">
+		<meta property="twitter:img-alt" content="Sharing banner for Renan Stuchi">
         <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v5.15.4/js/all.js" crossorigin="anonymous"></script>
