updated linkedin link

--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
                     <div class="social-icons">
 						<a class="social-icon" href="https://github.com/RenStu/logic" title="my public repository for studying logic"><i class="fas fa-infinity"></i></a>
 						<a class="social-icon" href="https://github.com/RenStu/" title="my github"><i class="fab fa-github"></i></a>
-                        <a class="social-icon" href="#!" title="my linkedin"><i class="fab fa-linkedin-in"></i></a>
-                        <a class="social-icon" href="#!" title="my twitter"><i class="fab fa-twitter"></i></a>
+                        <a class="social-icon" href="https://www.linkedin.com/in/renan-stuchi/" title="my linkedin"><i class="fab fa-linkedin-in"></i></a>
+                        <!-- <a class="social-icon" href="#!" title="my twitter"><i class="fab fa-twitter"></i></a> -->
                     </div>
                 </div>
             </section>
@@ -93,7 +93,7 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Senior Analyst</h3>
                             <div class="subheading mb-3">Cast Group</div>
-                            <p>Requirements analysis and development, actively participating in the implementation, testing and deployment of web, mobile and back-end solutions.</p>
+                            <p>ANAC - Requirements analysis and development, actively participating in the implementation, testing and deployment of web, mobile and back-end solutions.</p>
 							<p><b>Management and planning</b>: Scrum.
 							</br><b>Development patterns</b>: Inversion of Control (IoC); Clean Code.
 							</br><b>Architecture | Design patterns</b>: DDD; Onion; Microservice (Azure Service Fabric).
